--- a/Resources/ui/views/reportChart.html
+++ b/Resources/ui/views/reportChart.html
@@ -58,6 +58,7 @@
 	<body>
 
 <script src="../../lib/highcharts/highcharts.js"></script>
+<script src="../../src/thingRest.js"></script>
 <script src="../../lib/highcharts/highcharts-3d.js"></script>
 
 <div id="container" style="height: 400px"></div>
