--- a/Resources/ui/views/reportChart.html
+++ b/Resources/ui/views/reportChart.html
@@ -6,18 +6,19 @@
 		<style type="text/css">
 
 		</style>
-		<script type="text/javascript">
-		$(function () {
-		    
-		});
-		</script>
 	</head>
 	<body>
 
-	<script src="../../lib/highcharts/highcharts.js"></script>
-	<script src="../../lib/highcharts/highcharts-3d.js"></script>
-	
-	<script src="../../src/thingRest.js"></script>
-	<div id="container" style="height: 400px"></div>
+		<script src="../../lib/highcharts/highcharts.js"></script>
+		<script src="../../lib/highcharts/highcharts-3d.js"></script>
+
+		<!-- <script src="../../src/thingRest.js"></script> -->
+		<div id="container" style="height: 400px"></div>
+
+		<script type="text/javascript">
+			function dataCharts(data) {
+				$('#container').highcharts(JSON.parse(data)); 
+			}
+		</script>
 	</body>
 </html>
