--- a/Resources/ui/views/hospitals.html
+++ b/Resources/ui/views/hospitals.html
@@ -14,7 +14,7 @@
 	    </style>
 	</head>
     <body onload="Ti.API.info('body loaded!');">
-    	<h2>My Map</h2>
+    	<h2>Hospitals</h2>
     <div id="map" class="map"></div>
     
 
